# terraform-plan-reviewer

./: .gitignore  COMMERCIAL_LICENSE.txt  LICENSE  README.md  cli.py  gpt.py  parser.py  printer.py  pyproject.toml
examples/: sample_plan.json
terraform_plan_reviewer/: cli.py  gpt.py  printer.py
